fixed layout problems related to foundation 4 upgrade :

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,7 +5,6 @@
 @import "foundation"; 
 @import "articles";
 
-
 $blue_color: hsla(205, 100%, 45%, 0.70);
 $grey_color: hsla(263, 100%, 0%, 0.50);
 $section_bg_color: rgba(245, 245, 245, 0.32);
@@ -13,5 +12,5 @@ $section_bg_color: rgba(245, 245, 245, 0.32);
 
 body {
 	background-color: #DBD9DA;
-	background-image: url(noisy_grid.png);
+	background-image: url(sneaker_mesh_fabric.png);
 }
